fix(bottom-sheet): close button z-index

--- a/packages/webcomponents/bottom-sheet/src/style.scss
+++ b/packages/webcomponents/bottom-sheet/src/style.scss
@@ -78,6 +78,7 @@
         right: 16px;
         font-size: 20px;
         opacity: .5;
+        z-index: 1;
 
         &:hover,
         &:focus-visible {
